css/galery.css
html {
    scroll-behavior: smooth;
}
.grid-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
    gap: 2.5rem;
    padding-left:2rem;
    padding-right: 2rem;
    grid-auto-rows: auto;
    justify-content: center;
}
@media (max-width: 768px) {
    .grid-container {
        gap:1.5rem;
    }
}
main img {
    border-radius: 5px;
    box-shadow: 0 0 10px black;
}

.image-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 0.2rem;
    text-align: center;
}

.title {
    color: var(--main-color);
    font-size: 1.2rem;
    font-style: italic;
}

.title,
.caption,
.mobile-caption{
    font-family:Georgia, sans-serif;
}

.caption,
.mobile-caption {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    text-align: center;
    padding: 10px;
    box-sizing: border-box;
    opacity: 0;
    transition: opacity 0.3s ease;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    font-style: italic;
}

.image-caption-box
{
    position: relative;
    display: inline-block;
}

@keyframes fadeInUp {
    from { opacity: 0; transform: translateY(20px); }
    to { opacity: 1; transform: translateY(0); }
}

/* Animation for the container */
.image-container {
    opacity: 0;
    animation: fadeInUp 1s forwards;
}

/* animation delays for each container */
.image-container:nth-child(1) {
    animation-delay: 0s;
}
.image-container:nth-child(2) {
    animation-delay: 0.1s;
}
.image-container:nth-child(3) {
    animation-delay: 0.2s;
}
.image-container:nth-child(4) {
    animation-delay: 0.3s;
}
.image-container:nth-child(5) {
    animation-delay: 0.4s;
}
.image-container:nth-child(6) {
    animation-delay: 0.5s;
}
.image-container:nth-child(7) {
    animation-delay: 0.6s;
}
.image-container:nth-child(8) {
    animation-delay: 0.7s;
}
.image-container:nth-child(9) {
    animation-delay: 0.8s;
}
.image-container:nth-child(10) {
    animation-delay: 0.9s;
}
.image-container:nth-child(11) {
    animation-delay: 1s;
}
.image-container:nth-child(12) {
    animation-delay: 1.1s;
}
.image-container:nth-child(13) {
    animation-delay: 1.2s;
}
.image-container:nth-child(14) {
    animation-delay: 1.3s;
}
.image-container:nth-child(15) {
    animation-delay: 1.4s;
}
.image-container:nth-child(16) {
    animation-delay: 1.5s;
}

